--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       </div>
       <div id="sec">
         <div id="box1">
-          <h3>Product <br /><b>DESIGN</b></h3>
+          <h3>Poster <br /><b>DESIGN</b></h3>
           <p>
-            I'm a product designer focused on creating intuitive, user-centered
-            digital experiences. I turn complex problems into elegant,
-            functional designs through collaboration and creativity. My goal is
-            to build impactful products that are both accessible and visually
-            engaging.
+            I’m a poster designer passionate about crafting bold, eye-catching
+            visuals that communicate messages clearly and effectively. I combine
+            creativity with strong design principles to transform ideas into
+            impactful posters. My goal is to create designs that captivate
+            audiences while staying memorable and meaningful.
           </p>
         </div>
         <div id="box2">
