--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,53 +36,58 @@
           continue to grow and create impactful software solutions.
         </p>
       </div>
-      <div id="sec">
-        <div id="box1">
-          <h3>Poster <br /><b>DESIGN</b></h3>
-          <p>
-            I’m a poster designer passionate about crafting bold, eye-catching
-            visuals that communicate messages clearly and effectively. I combine
-            creativity with strong design principles to transform ideas into
-            impactful posters. My goal is to create designs that captivate
-            audiences while staying memorable and meaningful.
-          </p>
+      <section class="card">
+        <h2>Skills</h2>
+
+        <div id="sec">
+          <div id="box1">
+            <h3>Product <br /><b>DESIGN</b></h3>
+            <p>
+              I'm a product designer focused on creating intuitive,
+              user-centered digital experiences. I turn complex problems into
+              elegant, functional designs through collaboration and creativity.
+              My goal is to build impactful products that are both accessible
+              and visually engaging.
+            </p>
+          </div>
+          <div id="box2">
+            <h3>Frontend <br /><b>DEVELOPMENT</b></h3>
+            <p>
+              I'm a front-end developer dedicated to building responsive,
+              user-friendly web interfaces. I turn design concepts into
+              interactive, high-performance websites using modern technologies.
+              My focus is on clean code, seamless user experience, and
+              cross-platform compatibility.
+            </p>
+          </div>
         </div>
-        <div id="box2">
-          <h3>Frontend <br /><b>DEVELOPMENT</b></h3>
-          <p>
-            I'm a front-end developer dedicated to building responsive,
-            user-friendly web interfaces. I turn design concepts into
-            interactive, high-performance websites using modern technologies. My
-            focus is on clean code, seamless user experience, and cross-platform
-            compatibility.
-          </p>
+      </section>
+
+      <section class="progress">
+        <h2>Progress</h2>
+        <div id="pro">
+          <div id="Code">
+            <h3>Codeforces</h3>
+            <a href="https://codeforces.com/profile/khfaysal">
+              <img src="/Img/codeForces.png" alt=""
+            /></a>
+          </div>
+          <div id="Bee">
+            <h3>BeeCrowd</h3>
+            <br />
+            <a href="https://judge.beecrowd.com/en/profile/892863"
+              ><img src="/Img/beeCrowd.png" alt=""
+            /></a>
+          </div>
+          <div id="Git">
+            <h3>Github</h3>
+            <a href="https://github.com/khfaysal"
+              ><img src="/Img/github.png" alt=""
+            /></a>
+          </div>
         </div>
-      </div>
-      <div id="pro">
-        <div id="name">
-          <h2>Progress</h2>
-          <i class="ri-arrow-right-wide-fill"></i>
-        </div>
-        <div id="Code">
-          <h3>Codeforces</h3>
-          <a href="https://codeforces.com/profile/khfaysal">
-            <img src="/Img/codeForces.png" alt=""
-          /></a>
-        </div>
-        <div id="Bee">
-          <h3>BeeCrowd</h3>
-          <br />
-          <a href="https://judge.beecrowd.com/en/profile/892863"
-            ><img src="/Img/beeCrowd.png" alt=""
-          /></a>
-        </div>
-        <div id="Git">
-          <h3>Github</h3>
-          <a href="https://github.com/khfaysal"
-            ><img src="/Img/github.png" alt=""
-          /></a>
-        </div>
-      </div>
+      </section>
+
       <div id="cont">
         <h2>Contacts</h2>
         <br />
